# careercompass

./: .gitignore  README.md  package-lock.json
back-end/: .dockerignore  Dockerfile.cv  Dockerfile.hck  Dockerfile.inter  Dockerfile.maj  Dockerfile.rag  Dockerfile.uni  docker-compose.yml  health_check.sh  nginx.conf  requirements.txt
back-end/__BUILD__/: Jenkinsfile
back-end/auth/: __init__.py  auth.py  auth_routes.py  rate_limiter.py
back-end/config/: __init__.py  config.py
back-end/rag/: .env.rag  .gitignore  Makefile  pyproject.toml
back-end/rag/configs/: contextual_retrieval.yaml  parent_retrieval.yaml
back-end/rag/docker/: docker-compose.yml  mongo-init.js
back-end/rag/scripts/: build_rag_index.py  check_db_status.py  clean_database.py  run_etl_pdf.py
back-end/rag/src/rag_system/: __init__.py
back-end/rag/src/rag_system/offline/: __init__.py  document_store.py  embeddings.py  pdf_processor.py  vector_store.py
back-end/rag/src/rag_system/online/: __init__.py  career_agent.py
back-end/rag/src/rag_system/shared/: __init__.py  config.py
back-end/rag/tools/: run_agent.py  web_server.py
back-end/services/: evaluate_cv_simple.py  health_check.py  interview.py  list_major.py  list_university.py  users.db
back-end/services/data/interview/: interview.json  model.json
back-end/services/data/school/: ANH.json  ANS.json  BKA.json  BMU.json  BPH.json  BUV.json  BVH.json  BVS.json  BVU.json  CCM.json  CDD0209.json  CEA.json  CIV.json  CMC.json  CSH.json  CSS.json  DAD.json  DBD.json  DBG.json  DBH.json  DBL.json  DCA.json  DCD.json  DCH.json  DCL.json  DCN.json  DCQ.json  DCT.json  DCV.json  DDA.json  (+270 more)
front-end/: .dockerignore  Dockerfile  docker-compose.yml  health_check.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
front-end/__BUILD__/: Jenkinsfile
front-end/src/: App.css  App.jsx  App_backup.jsx  main.jsx
front-end/src/components/: AuthTestComponent.jsx  ProGuard.jsx  ServiceStatusPanel.jsx  TokenDebugger.jsx  firebase.js
front-end/src/contexts/: AuthContext.jsx
front-end/src/services/: auth.js
front-end/src/utils/: apiClient.js  serviceHealth.js
(+27 files in other folders)
